Add real implementations of validators

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,2 +1,14 @@
 message.typeNotSupported=trade type is not supported
 message.validationNotPossible=validation is not possible due to failed preconditions
+message.valueDateNotValidForCurrency=value date is not equal to date of trade for currency {0}
+message.valueDateAgainstCurrencyValidationNotPossible=validation of value date against currencies is not possible due to failed preconditions
+message.valueDateBeforeTradeDate=value date is before trade data
+message.valueDateNotBeforeTradeDateValidationNotPossible=validation if value date is not before trade date is not possible due to failed preconditions
+message.valueDateNotBeforeCurrentSpotTrade=value date is not before current date for spot trade
+message.valueDateNotAfterCurrentForwardTrade=value date is not after current date for forward trade
+message.valueDateAgainstProductTypeValidationNotPossible=validation of value date against product type is not possible due to failed preconditions
+message.dateNotBeforeDeliveryDateInOptions={0} is not before delivery date for options trade
+message.dateBeforeDeliveryDateValidationNotPossible=validation if {0} is before delivery date is not possible due to failed preconditions
+message.exerciseStartDateNotAfterTradeDateForAmericanOptions=exercise start date is not after trade date
+message.exerciseStartDateNotBeforeExpiryDateForAmericanOptions=exercise start date is not before expiry date
+message.exerciseStartDateForAmericanOptionsValidationNotPossible=validation of exercise start date is not possible due to failed preconditions
