Fix ValueDateForCurrencyValidator and tests

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,7 +1,7 @@
 message.typeNotSupported=trade type is not supported
 message.validationNotPossible=validation is not possible due to failed preconditions
-message.valueDateNotValidForCurrency=value date is not equal to date of trade for currency {0}
-message.valueDateAgainstCurrencyValidationNotPossible=validation of value date against currencies is not possible due to failed preconditions
+message.valueDateNotValidForCurrencies=value date is not equal to date of trade for currencies {0}
+message.valueDateAgainstCurrenciesValidationNotPossible=validation of value date against currencies is not possible due to failed preconditions
 message.valueDateBeforeTradeDate=value date is before trade data
 message.valueDateNotBeforeTradeDateValidationNotPossible=validation if value date is not before trade date is not possible due to failed preconditions
 message.valueDateNotBeforeCurrentSpotTrade=value date is not before current date for spot trade
